Fix flex  direction of ul

--- a/src/test/test-tabs.html
+++ b/src/test/test-tabs.html
@@ -71,7 +71,7 @@
   ui:orientation 0; ui:ordered true;
   ui:subject &lt;#it&gt;.
 &lt;#it&gt;
-  trip:attachmentList ( &lt;http://aclu.org/&gt; &lt;http://cnn.com/&gt; &lt;https://webfoundation.org/&gt; ) .
+  trip:attachmentList ( &lt;http://aclu.org/&gt; &lt;http://inrupt.com/&gt; &lt;https://webfoundation.org/&gt; ) .
 
 #ends
 
