--- a/examples/test-matrix.html
+++ b/examples/test-matrix.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head><meta charset='UTF-8'>Test matrix.js</title>
-<link type="text/css" rel="stylesheet"
- href="https://linkeddata.github.io/tabulator-firefox/content/tabbedtab.css" />
+<!-- <link type="text/css" rel="stylesheet"
+ href="https://linkeddata.github.io/tabulator-firefox/content/tabbedtab.css" /> -->
 <style>
 
 input { background-color: #eef; padding: 0.5em;  border: .5em solid white; font-size: 120%; };
@@ -25,7 +25,7 @@ td.input {border-top: 0.1em solid gray;  border-right: 0.1em dotted gray; }
 td.output {border-top: 0.1em solid gray;}
 
 </style>
-<script type="text/javascript" src="../../../mashlib/dist/mashlib-prealpha.js"></script>
+<script type="text/javascript" src="../lib/webpack-bundle.js"></script>
 <!-- "https://linkeddata.github.io/app-schedule/schedule.js" -->
 <script type="text/javascript" src="test-matrix.js"></script>
 </head>
