examples into folders

--- a/examples/tabs/index.html
+++ b/examples/tabs/index.html
@@ -30,7 +30,7 @@
 
   ]]>
   </style>
-  <script type="text/javascript" src="../lib/webpack-bundle.js">
+  <script type="text/javascript" src="../../lib/webpack-bundle.js">
 </script>
 <!-- "https://linkeddata.github.io/app-schedule/schedule.js" -->
 
