--- a/examples/matrix/index.html
+++ b/examples/matrix/index.html
@@ -25,7 +25,7 @@ td.input {border-top: 0.1em solid gray;  border-right: 0.1em dotted gray; }
 td.output {border-top: 0.1em solid gray;}
 
 </style>
-<script type="text/javascript" src="../lib/webpack-bundle.js"></script>
+<script type="text/javascript" src="../../lib/webpack-bundle.js"></script>
 <!-- "https://linkeddata.github.io/app-schedule/schedule.js" -->
 <script type="text/javascript" src="test-matrix.js"></script>
 </head>
