--- a/examples/buttons/index.html
+++ b/examples/buttons/index.html
@@ -172,17 +172,20 @@
   <h2>formatDateTime</h2>
   <script id="script-formatDateTime">
     window.addEventListener('DOMContentLoaded', (event) => {
-      const result = UI.widgets.formatDateTime()
+      const result = UI.widgets.formatDateTime(
+        new Date(),
+        '{FullYear}-{Month}-{Date}T{Hours}:{Minutes}:{Seconds}.{Milliseconds}'
+      )
       $('#div-formatDateTime').appendChild(document.createTextNode(result))
     })
   </script>
   <pre id="viewSource-formatDateTime"></pre><script>$('#viewSource-formatDateTime').innerHTML = $('#script-formatDateTime').innerText</script>
   <div id="div-formatDateTime"></div>
 
-  <h2>faviconOrDefault</h2>
+  <h2 id="faviconOrDefault">faviconOrDefault</h2>
   <script id="script-faviconOrDefault">
     window.addEventListener('DOMContentLoaded', (event) => {
-      const result = UI.widgets.faviconOrDefault()
+      const result = UI.widgets.faviconOrDefault(document, UI.rdf.namedNode('https://solidproject.org/'))
       $('#div-faviconOrDefault').appendChild(document.createTextNode(result))
     })
   </script>
@@ -192,8 +195,8 @@
   <h2>fileUploadButtonDiv</h2>
   <script id="script-fileUploadButtonDiv">
     window.addEventListener('DOMContentLoaded', (event) => {
-      const result = UI.widgets.fileUploadButtonDiv()
-      $('#div-fileUploadButtonDiv').appendChild(document.createTextNode(result))
+      // const result = UI.widgets.fileUploadButtonDiv()
+      // $('#div-fileUploadButtonDiv').appendChild(document.createTextNode(result))
     })
   </script>
   <pre id="viewSource-fileUploadButtonDiv"></pre><script>$('#viewSource-fileUploadButtonDiv').innerHTML = $('#script-fileUploadButtonDiv').innerText</script>
@@ -202,8 +205,8 @@
   <h2>findImage</h2>
   <script id="script-findImage">
     window.addEventListener('DOMContentLoaded', (event) => {
-      const result = UI.widgets.findImage()
-      $('#div-findImage').appendChild(document.createTextNode(result))
+      // const result = UI.widgets.findImage()
+      // $('#div-findImage').appendChild(document.createTextNode(result))
     })
   </script>
   <pre id="viewSource-findImage"></pre><script>$('#viewSource-findImage').innerHTML = $('#script-findImage').innerText</script>
@@ -212,8 +215,8 @@
   <h2>findImageFromURI</h2>
   <script id="script-findImageFromURI">
     window.addEventListener('DOMContentLoaded', (event) => {
-      const result = UI.widgets.findImageFromURI()
-      $('#div-findImageFromURI').appendChild(document.createTextNode(result))
+      // const result = UI.widgets.findImageFromURI()
+      // $('#div-findImageFromURI').appendChild(document.createTextNode(result))
     })
   </script>
   <pre id="viewSource-findImageFromURI"></pre><script>$('#viewSource-findImageFromURI').innerHTML = $('#script-findImageFromURI').innerText</script>
@@ -222,8 +225,8 @@
   <h2>iconForClass</h2>
   <script id="script-iconForClass">
     window.addEventListener('DOMContentLoaded', (event) => {
-      const result = UI.widgets.iconForClass()
-      $('#div-iconForClass').appendChild(document.createTextNode(result))
+      // const result = UI.widgets.iconForClass()
+      // $('#div-iconForClass').appendChild(document.createTextNode(result))
     })
   </script>
   <pre id="viewSource-iconForClass"></pre><script>$('#viewSource-iconForClass').innerHTML = $('#script-iconForClass').innerText</script>
@@ -232,8 +235,8 @@
   <h2>imagesOf</h2>
   <script id="script-imagesOf">
     window.addEventListener('DOMContentLoaded', (event) => {
-      const result = UI.widgets.imagesOf()
-      $('#div-imagesOf').appendChild(document.createTextNode(result))
+      // const result = UI.widgets.imagesOf()
+      // $('#div-imagesOf').appendChild(document.createTextNode(result))
     })
   </script>
   <pre id="viewSource-imagesOf"></pre><script>$('#viewSource-imagesOf').innerHTML = $('#script-imagesOf').innerText</script>
@@ -242,8 +245,8 @@
   <h2>index</h2>
   <script id="script-index">
     window.addEventListener('DOMContentLoaded', (event) => {
-      const result = UI.widgets.index()
-      $('#div-index').appendChild(document.createTextNode(result))
+      // const result = UI.widgets.index()
+      // $('#div-index').appendChild(document.createTextNode(result))
     })
   </script>
   <pre id="viewSource-index"></pre><script>$('#viewSource-index').innerHTML = $('#script-index').innerText</script>
@@ -252,8 +255,8 @@
   <h2>isAudio</h2>
   <script id="script-isAudio">
     window.addEventListener('DOMContentLoaded', (event) => {
-      const result = UI.widgets.isAudio()
-      $('#div-isAudio').appendChild(document.createTextNode(result))
+      // const result = UI.widgets.isAudio()
+      // $('#div-isAudio').appendChild(document.createTextNode(result))
     })
   </script>
   <pre id="viewSource-isAudio"></pre><script>$('#viewSource-isAudio').innerHTML = $('#script-isAudio').innerText</script>
@@ -262,8 +265,8 @@
   <h2>isImage</h2>
   <script id="script-isImage">
     window.addEventListener('DOMContentLoaded', (event) => {
-      const result = UI.widgets.isImage()
-      $('#div-isImage').appendChild(document.createTextNode(result))
+      // const result = UI.widgets.isImage()
+      // $('#div-isImage').appendChild(document.createTextNode(result))
     })
   </script>
   <pre id="viewSource-isImage"></pre><script>$('#viewSource-isImage').innerHTML = $('#script-isImage').innerText</script>
@@ -272,8 +275,8 @@
   <h2>isVideo</h2>
   <script id="script-isVideo">
     window.addEventListener('DOMContentLoaded', (event) => {
-      const result = UI.widgets.isVideo()
-      $('#div-isVideo').appendChild(document.createTextNode(result))
+      // const result = UI.widgets.isVideo()
+      // $('#div-isVideo').appendChild(document.createTextNode(result))
     })
   </script>
   <pre id="viewSource-isVideo"></pre><script>$('#viewSource-isVideo').innerHTML = $('#script-isVideo').innerText</script>
@@ -282,8 +285,8 @@
   <h2>linkButton</h2>
   <script id="script-linkButton">
     window.addEventListener('DOMContentLoaded', (event) => {
-      const result = UI.widgets.linkButton()
-      $('#div-linkButton').appendChild(document.createTextNode(result))
+      // const result = UI.widgets.linkButton()
+      // $('#div-linkButton').appendChild(document.createTextNode(result))
     })
   </script>
   <pre id="viewSource-linkButton"></pre><script>$('#viewSource-linkButton').innerHTML = $('#script-linkButton').innerText</script>
@@ -292,8 +295,8 @@
   <h2>linkIcon</h2>
   <script id="script-linkIcon">
     window.addEventListener('DOMContentLoaded', (event) => {
-      const result = UI.widgets.linkIcon()
-      $('#div-linkIcon').appendChild(document.createTextNode(result))
+      // const result = UI.widgets.linkIcon()
+      // $('#div-linkIcon').appendChild(document.createTextNode(result))
     })
   </script>
   <pre id="viewSource-linkIcon"></pre><script>$('#viewSource-linkIcon').innerHTML = $('#script-linkIcon').innerText</script>
@@ -302,8 +305,8 @@
   <h2>openHrefInOutlineMode</h2>
   <script id="script-openHrefInOutlineMode">
     window.addEventListener('DOMContentLoaded', (event) => {
-      const result = UI.widgets.openHrefInOutlineMode()
-      $('#div-openHrefInOutlineMode').appendChild(document.createTextNode(result))
+      // const result = UI.widgets.openHrefInOutlineMode()
+      // $('#div-openHrefInOutlineMode').appendChild(document.createTextNode(result))
     })
   </script>
   <pre id="viewSource-openHrefInOutlineMode"></pre><script>$('#viewSource-openHrefInOutlineMode').innerHTML = $('#script-openHrefInOutlineMode').innerText</script>
@@ -312,8 +315,8 @@
   <h2>personTR</h2>
   <script id="script-personTR">
     window.addEventListener('DOMContentLoaded', (event) => {
-      const result = UI.widgets.personTR()
-      $('#div-personTR').appendChild(document.createTextNode(result))
+      // const result = UI.widgets.personTR()
+      // $('#div-personTR').appendChild(document.createTextNode(result))
     })
   </script>
   <pre id="viewSource-personTR"></pre><script>$('#viewSource-personTR').innerHTML = $('#script-personTR').innerText</script>
@@ -322,8 +325,8 @@
   <h2>propertyTriage</h2>
   <script id="script-propertyTriage">
     window.addEventListener('DOMContentLoaded', (event) => {
-      const result = UI.widgets.propertyTriage()
-      $('#div-propertyTriage').appendChild(document.createTextNode(result))
+      // const result = UI.widgets.propertyTriage()
+      // $('#div-propertyTriage').appendChild(document.createTextNode(result))
     })
   </script>
   <pre id="viewSource-propertyTriage"></pre><script>$('#viewSource-propertyTriage').innerHTML = $('#script-propertyTriage').innerText</script>
@@ -332,8 +335,8 @@
   <h2>refreshTree</h2>
   <script id="script-refreshTree">
     window.addEventListener('DOMContentLoaded', (event) => {
-      const result = UI.widgets.refreshTree()
-      $('#div-refreshTree').appendChild(document.createTextNode(result))
+      // const result = UI.widgets.refreshTree()
+      // $('#div-refreshTree').appendChild(document.createTextNode(result))
     })
   </script>
   <pre id="viewSource-refreshTree"></pre><script>$('#viewSource-refreshTree').innerHTML = $('#script-refreshTree').innerText</script>
@@ -342,8 +345,8 @@
   <h2>removeButton</h2>
   <script id="script-removeButton">
     window.addEventListener('DOMContentLoaded', (event) => {
-      const result = UI.widgets.removeButton()
-      $('#div-removeButton').appendChild(document.createTextNode(result))
+      // const result = UI.widgets.removeButton()
+      // $('#div-removeButton').appendChild(document.createTextNode(result))
     })
   </script>
   <pre id="viewSource-removeButton"></pre><script>$('#viewSource-removeButton').innerHTML = $('#script-removeButton').innerText</script>
@@ -372,8 +375,8 @@
   <h2>selectorPanel</h2>
   <script id="script-selectorPanel">
     window.addEventListener('DOMContentLoaded', (event) => {
-      const result = UI.widgets.selectorPanel()
-      $('#div-selectorPanel').appendChild(document.createTextNode(result))
+      // const result = UI.widgets.selectorPanel()
+      // $('#div-selectorPanel').appendChild(document.createTextNode(result))
     })
   </script>
   <pre id="viewSource-selectorPanel"></pre><script>$('#viewSource-selectorPanel').innerHTML = $('#script-selectorPanel').innerText</script>
@@ -382,8 +385,8 @@
   <h2>selectorPanelRefresh</h2>
   <script id="script-selectorPanelRefresh">
     window.addEventListener('DOMContentLoaded', (event) => {
-      const result = UI.widgets.selectorPanelRefresh()
-      $('#div-selectorPanelRefresh').appendChild(document.createTextNode(result))
+      // const result = UI.widgets.selectorPanelRefresh()
+      // $('#div-selectorPanelRefresh').appendChild(document.createTextNode(result))
     })
   </script>
   <pre id="viewSource-selectorPanelRefresh"></pre><script>$('#viewSource-selectorPanelRefresh').innerHTML = $('#script-selectorPanelRefresh').innerText</script>
@@ -392,8 +395,8 @@
   <h2>setImage</h2>
   <script id="script-setImage">
     window.addEventListener('DOMContentLoaded', (event) => {
-      const result = UI.widgets.setImage()
-      $('#div-setImage').appendChild(document.createTextNode(result))
+      // const result = UI.widgets.setImage()
+      // $('#div-setImage').appendChild(document.createTextNode(result))
     })
   </script>
   <pre id="viewSource-setImage"></pre><script>$('#viewSource-setImage').innerHTML = $('#script-setImage').innerText</script>
@@ -402,8 +405,8 @@
   <h2>setName</h2>
   <script id="script-setName">
     window.addEventListener('DOMContentLoaded', (event) => {
-      const result = UI.widgets.setName()
-      $('#div-setName').appendChild(document.createTextNode(result))
+      // const result = UI.widgets.setName()
+      // $('#div-setName').appendChild(document.createTextNode(result))
     })
   </script>
   <pre id="viewSource-setName"></pre><script>$('#viewSource-setName').innerHTML = $('#script-setName').innerText</script>
@@ -412,8 +415,8 @@
   <h2>tempSite</h2>
   <script id="script-tempSite">
     window.addEventListener('DOMContentLoaded', (event) => {
-      const result = UI.widgets.tempSite()
-      $('#div-tempSite').appendChild(document.createTextNode(result))
+      // const result = UI.widgets.tempSite()
+      // $('#div-tempSite').appendChild(document.createTextNode(result))
     })
   </script>
   <pre id="viewSource-tempSite"></pre><script>$('#viewSource-tempSite').innerHTML = $('#script-tempSite').innerText</script>
