--- a/examples/buttons/index.html
+++ b/examples/buttons/index.html
@@ -366,8 +366,13 @@
  <h2 id="linkButton"><a href="#linkButton">linkButton</a></h2>
   <script id="script-linkButton">
     window.addEventListener('DOMContentLoaded', (event) => {
-      // const result = UI.widgets.linkButton()
-      // $('#div-linkButton').appendChild(document.createTextNode(result))
+      document.outlineManager = {
+        GotoSubject: (object) => {
+          window.alert('You told the outlineManager to go to subject ' + object.uri)
+        }
+      }
+      const result = UI.widgets.linkButton(document, UI.rdf.namedNode('http://example.com/'))
+      $('#div-linkButton').appendChild(result)
     })
   </script>
   <pre id="viewSource-linkButton"></pre><script>$('#viewSource-linkButton').innerHTML = $('#script-linkButton').innerText</script>
@@ -376,8 +381,15 @@
  <h2 id="linkIcon"><a href="#linkIcon">linkIcon</a></h2>
   <script id="script-linkIcon">
     window.addEventListener('DOMContentLoaded', (event) => {
-      // const result = UI.widgets.linkIcon()
-      // $('#div-linkIcon').appendChild(document.createTextNode(result))
+      $('#div-linkIcon').appendChild(UI.widgets.linkIcon(
+        document, 
+        UI.rdf.namedNode('https://example.com/'))
+      )
+      $('#div-linkIcon').appendChild(UI.widgets.linkIcon(
+        document, 
+        UI.rdf.namedNode('https://example.org/'), 
+        'https://solidproject.org/favicon.ico')
+      )
     })
   </script>
   <pre id="viewSource-linkIcon"></pre><script>$('#viewSource-linkIcon').innerHTML = $('#script-linkIcon').innerText</script>
@@ -386,8 +398,19 @@
  <h2 id="openHrefInOutlineMode"><a href="#openHrefInOutlineMode">openHrefInOutlineMode</a></h2>
   <script id="script-openHrefInOutlineMode">
     window.addEventListener('DOMContentLoaded', (event) => {
-      // const result = UI.widgets.openHrefInOutlineMode()
-      // $('#div-openHrefInOutlineMode').appendChild(document.createTextNode(result))
+      document.outlineManager = {
+        GotoSubject: (object) => {
+          window.alert('You told the outlineManager to go to subject ' + object.uri)
+        }
+      }
+      const anchor = document.createElement('a')
+      anchor.setAttribute('href', 'http://example.com')
+      anchor.onclick = (e) => {
+        UI.widgets.openHrefInOutlineMode(e)
+        return false
+      }
+      anchor.appendChild(document.createTextNode('click me'))
+      $('#div-openHrefInOutlineMode').appendChild(anchor)
     })
   </script>
   <pre id="viewSource-openHrefInOutlineMode"></pre><script>$('#viewSource-openHrefInOutlineMode').innerHTML = $('#script-openHrefInOutlineMode').innerText</script>
@@ -396,8 +419,9 @@
  <h2 id="personTR"><a href="#personTR">personTR</a></h2>
   <script id="script-personTR">
     window.addEventListener('DOMContentLoaded', (event) => {
-      // const result = UI.widgets.personTR()
-      // $('#div-personTR').appendChild(document.createTextNode(result))
+      const michiel = UI.rdf.namedNode('https://michielbdejong.inrupt.net/profile/card#me')
+      const result = UI.widgets.personTR(document, null, michiel)
+      $('#div-personTR').appendChild(result)
     })
   </script>
   <pre id="viewSource-personTR"></pre><script>$('#viewSource-personTR').innerHTML = $('#script-personTR').innerText</script>
@@ -406,8 +430,9 @@
  <h2 id="propertyTriage"><a href="#propertyTriage">propertyTriage</a></h2>
   <script id="script-propertyTriage">
     window.addEventListener('DOMContentLoaded', (event) => {
-      // const result = UI.widgets.propertyTriage()
-      // $('#div-propertyTriage').appendChild(document.createTextNode(result))
+      const kb = UI.rdf.graph()
+      const result = UI.widgets.propertyTriage(kb)
+      $('#div-propertyTriage').appendChild(document.createTextNode(JSON.stringify(result)))
     })
   </script>
   <pre id="viewSource-propertyTriage"></pre><script>$('#viewSource-propertyTriage').innerHTML = $('#script-propertyTriage').innerText</script>
